--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fluid Bind</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link href="https://typography-interaction.github.io/assets/styles/reset.css" rel="stylesheet"> -->
-    <link href="common.css" rel="stylesheet">
+    <link href="assets/common.css" rel="stylesheet">
 </head>
 
 <body>
