--- a/Page 1/index.html
+++ b/Page 1/index.html
@@ -2,14 +2,19 @@
 <html>
 
 <head>
-    <title>Fluid Bind</title>
+    <title>Entry 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="assets/reset.css" rel="stylesheet">
-    <link href="assets/common.css" rel="stylesheet">
+    <link href="../assets/reset.css" rel="stylesheet">
+    <link href="../assets/common.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="topnav">
+        <a class="active" href="#home">Fluid Bind</a>
+        <a href="#news">Gradients: Design trend</a>
+        <a href="#contact">Dynamic identities</a>
+        <a href="#about">Graphic Design: Histories</a>
     </div>
     <header>
         <h1>Design Trends in Brands & Media + Graphic Design Timelines</h1>
