--- a/page-1/index.html
+++ b/page-1/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <div class="topnav">
+        <span>Fluid Bind</span>
     </div>
     <header>
-        <h1>Gradients</h1>
+        <h1>GRADIENTS</h1>
         <h2>The colorful design trend aiming to soothe these anxious times</h2>
         <p>By Daisy Alioto
             Mar 1, 2019, 7:00am EST</p>
