--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="topnav">
+        <span>Fluid Bind</span>
     </div>
     <header>
         <h1>Design Trends in Brands & Media + Graphic Design Timelines</h1>
