--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <title>Fluid Bind</title>
+    <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/reset.css" rel="stylesheet">
     <link href="assets/common.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
