--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
     <title>Fluid Bind</title>
     <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
+    <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/reset.css" rel="stylesheet">
     <link href="assets/common.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: black;
-        }
-    </style>
 </head>
 
+
 <body>
+    <div class="right-chevron chevron">&gt;</div>
+    <div class="left-chevron chevron">&lt;</div>
+
     <div class="topnav">
-        <span>Fluid Bind</span>
+        <a id="title" href="/">Fluid Bind</a>
+        <a id="scroll-top" href="#">↑</a>
     </div>
     <header>
         <h1>Design Trends in Brands & Media + Graphic Design Timelines</h1>
