--- a/page-1/index.html
+++ b/page-1/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <div class="topnav">
-        <span>Fluid Bind</span>
+        <a href="/">Fluid Bind</a>
     </div>
+
     <header>
-        <h1>GRADIENTS</h1>
-        <h2>The colorful design trend aiming to soothe these anxious times</h2>
+        <h2>GRADIENTS</h2>
+        <h3>The colorful design trend aiming to soothe these anxious times</h3>
         <p>By Daisy Alioto
             Mar 1, 2019, 7:00am EST</p>
         <p>Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a&nbsp;sunset.</p>
