--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fluid Bind</title>
     <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
-    <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/reset.css" rel="stylesheet">
     <link href="assets/common.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 
