--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
     <link href="assets/reset.css" rel="stylesheet">
     <link href="assets/common.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <!-- <link href="style.css" rel="stylesheet"> -->
 </head>
 
 
