--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
     <link href="assets/reset.css" rel="stylesheet">
     <link href="assets/common.css" rel="stylesheet">
-    <!-- <link href="style.css" rel="stylesheet"> -->
+    <link href="style.css" rel="stylesheet">
 </head>
 
 
 <body>
-    <div class="right-chevron chevron">&gt;</div>
-    <div class="left-chevron chevron">&lt;</div>
-
+    <!-- ARROWS -->
+    <div class="right-chevron chevron">
+        <a id="next-page" href="../page-1/index.html">&gt;</a>
+    </div>
+    <div class="left-chevron chevron">
+        <a id="previous-page" href="../page-3/index.html">&lt;</a>
+    </div>
+    <!-- TOP NAV -->
     <div class="topnav">
         <a id="title" href="/">Fluid Bind</a>
         <a id="scroll-top" href="#">↑</a>
