--- a/page-1/index.html
+++ b/page-1/index.html
@@ -2,35 +2,53 @@
 <html>
 
 <head>
-    <title>Gradients | Fluid Bind</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gradients | Fluid Bind</title>
+    <link rel="stylesheet" href="https://use.typekit.net/oqq7mky.css">
     <link href="../assets/reset.css" rel="stylesheet">
     <link href="../assets/common.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <!-- <link href="style.css" rel="stylesheet"> -->
 </head>
 
-<body>
-    <div class="topnav">
-        <a href="/">Fluid Bind</a>
-    </div>
 
+<body>
+    <!-- ARROWS -->
+    <div class="right-chevron chevron">
+        <a id="next-page" href="../page-2/index.html">&gt;</a>
+    </div>
+    <div class="left-chevron chevron">
+        <a id="previous-page" href="../">&lt;</a>
+    </div>
+    <!-- TOP NAV -->
+    <div class="topnav">
+        <a id="title" href="/">Fluid Bind</a>
+        <a id="scroll-top" href="#">↑</a>
+    </div>
     <header>
         <h2>GRADIENTS</h2>
         <h3>The colorful design trend aiming to soothe these anxious times</h3>
-        <p>By Daisy Alioto
-            Mar 1, 2019, 7:00am EST</p>
-        <p>Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a&nbsp;sunset.</p>
+        <h3>By Daisy Alioto
+            Mar 1, 2019, 7:00am EST</h3>
+        <h4>Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.</h4>
     </header>
-    <main>
-        <p></p>
-    </main>
-    <footer>
-        <button>
-            <span>Gradients: Design trend ></span>
-            <span>Dynamic identities ></span>
-            <span>Graphic Design: Histories ></span>
-        </button>
-    </footer>
+    <details class="question" id="question-1">
+        <summary>What it is:</summary>
+        <div>
+            <p>A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.
+            </p>
+        </div>
+        <main>
+            <p></p>
+        </main>
+        <footer>
+            <button>
+                <span>Gradients: Design trend ></span>
+                <span>Dynamic identities ></span>
+                <span>Graphic Design: Histories ></span>
+            </button>
+        </footer>
 </body>
 
 </html>
