Major changes and adjustments

--- a/index.html
+++ b/index.html
@@ -24,23 +24,37 @@
         <a id="title" href="/">Fluid Bind</a>
         <a id="scroll-top" href="#">↑</a>
     </div>
+    <!-- PAGE NUMBER INDICATIONS-->
+    <nav class="page-numbers">
+        <a class="page-indication page-1">1
+        </a>
+        <a class="page-indication page-2">2
+        </a>
+        <a class="page-indication page-3">3
+        </a>
+    </nav>
+
     <header>
-        <h1>Design Trends in Brands & Media + Graphic Design Timelines</h1>
+        <h1>Design Trends in Brands &&nbsp; Media + Graphic&nbsp; Design Timelines</h1>
         <p>↓</p>
     </header>
     <main>
-        <p>Hi Folks! Sushanto here. I'm from India. I've always been a Creative Enthusiast and a Visual Artist. Right
-            now, I'm in headway towards qualifying as a UI/UX&nbsp;designer. The digital&nbsp;binding you're looking at
-            is&nbsp;an overview of my
-            Typography & Interaction Project&nbsp;3. Last but not the least, I&nbsp;love dark&nbsp;mode.</p>
+        <p>Hi Folks! Sushanto here. I'm from India. I've always been a Creative Enthusiast and a Visual Artist.
+            Currently, I'm steering towards qualifying as a UI/UX&nbsp;designer. The digital&nbsp;binding you're looking
+            at is&nbsp;an overview of my Typography & Interaction project. Last but not least, I&nbsp;love
+            dark&nbsp;mode.</p>
     </main>
-    <footer>
-        <button>
-            <span>Gradients: Design trend ></span>
-            <span>Dynamic identities ></span>
-            <span>Graphic Design: Histories ></span>
-        </button>
-    </footer>
+
+    <!-- BOTTOM NAVIGATION FOR MOBILE -->
+    <nav class="mobile-nav">
+        <a class="bloc-icon page-1" href="../page-1/index.html">Gradients: Design trend
+        </a>
+        <a class="bloc-icon page-2" href="../page-2/index.html">Dynamic identities
+        </a>
+        <a class="bloc-icon page-3" href="../page-3/index.html">Graphic Design: Histories
+        </a>
+    </nav>
+
 </body>
 
 </html>
