PAGE NUMBER INDICATIONS

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </div>
     <!-- PAGE NUMBER INDICATIONS-->
     <nav class="page-numbers">
-        <a class="page-indication page-1">1
+        <a class="page-indication page-1" href="../page-1/index.html">1
         </a>
-        <a class="page-indication page-2">2
+        <a class="page-indication page-2" href="../page-3/index.html">2
         </a>
-        <a class="page-indication page-3">3
+        <a class="page-indication page-3" href="../page-3/index.html">3
         </a>
     </nav>
 
