Page link corrections

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <!-- ARROWS -->
     <div class="right-chevron chevron">
-        <a id="next-page" href="../page-1/index.html">&gt;</a>
+        <a id="next-page" href="page-1/">&gt;</a>
     </div>
     <div class="left-chevron chevron">
-        <a id="previous-page" href="../page-3/index.html">&lt;</a>
+        <a id="previous-page" href="page-3/">&lt;</a>
     </div>
     <!-- TOP NAV -->
     <div class="topnav">
@@ -26,11 +26,11 @@
     </div>
     <!-- PAGE NUMBER INDICATIONS-->
     <nav class="page-numbers">
-        <a class="page-indication page-1" href="../page-1/index.html">1
+        <a class="page-indication page-1" href="page-1/">1
         </a>
-        <a class="page-indication page-2" href="../page-3/index.html">2
+        <a class="page-indication page-2" href="page-2/">2
         </a>
-        <a class="page-indication page-3" href="../page-3/index.html">3
+        <a class="page-indication page-3" href="page-3/">3
         </a>
     </nav>
 
@@ -47,11 +47,11 @@
 
     <!-- BOTTOM NAVIGATION FOR MOBILE -->
     <nav class="mobile-nav">
-        <a class="bloc-icon page-1" href="../page-1/index.html">Gradients: Design trend
+        <a class="bloc-icon page-1" href="page-1/">Gradients: Design trend
         </a>
-        <a class="bloc-icon page-2" href="../page-2/index.html">Dynamic identities
+        <a class="bloc-icon page-2" href="page-2/">Dynamic identities
         </a>
-        <a class="bloc-icon page-3" href="../page-3/index.html">Graphic Design: Histories
+        <a class="bloc-icon page-3" href="page-3/">Graphic Design: Histories
         </a>
     </nav>
 
