--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <!-- TOP NAV -->
     <div class="topnav">
-        <a id="title" href="/">Fluid Bind</a>
+        <a id="title" href="./ ">Fluid Bind</a>
         <a id="scroll-top" href="#">↑</a>
     </div>
     <!-- PAGE NUMBER INDICATIONS-->
@@ -47,12 +47,9 @@
 
     <!-- BOTTOM NAVIGATION FOR MOBILE -->
     <nav class="mobile-nav">
-        <a class="bloc-icon page-1" href="page-1/">Gradients: Design trend
-        </a>
-        <a class="bloc-icon page-2" href="page-2/">Dynamic identities
-        </a>
-        <a class="bloc-icon page-3" href="page-3/">Graphic Design: Histories
-        </a>
+        <a class="bloc-icon page-1" href="page-1/">Gradients: Design trend</a>
+        <a class="bloc-icon page-2" href="page-2/">Dynamic identities</a>
+        <a class="bloc-icon page-3" href="page-3/">Graphic Design: Histories</a>
     </nav>
 
 </body>
