--- a/page-1/index.html
+++ b/page-1/index.html
@@ -11,43 +11,100 @@
     <link href="style.css" rel="stylesheet">
 </head>
 
-
 <body>
     <!-- ARROWS -->
     <div class="right-chevron chevron">
-        <a id="next-page" href="../page-2/index.html">&gt;</a>
+        <a id="next-page" href="/page-2">&gt;</a>
     </div>
     <div class="left-chevron chevron">
         <a id="previous-page" href="../">&lt;</a>
     </div>
     <!-- TOP NAV -->
     <div class="topnav">
-        <a id="title" href="/">Fluid Bind</a>
+        <a id="title" href="../ ">Fluid Bind</a>
         <a id="scroll-top" href="#">↑</a>
     </div>
+    <!-- PAGE NUMBER INDICATIONS-->
+    <nav class="page-numbers">
+        <a class="page-indication page-1" href="../page-1/">1
+        </a>
+        <a class="page-indication page-2" href="page-2/">2
+        </a>
+        <a class="page-indication page-3" href="page-3/">3
+        </a>
+    </nav>
+
     <header>
         <h2>GRADIENTS</h2>
         <h3>The colorful design trend aiming to soothe these anxious times</h3>
-        <h3>By Daisy Alioto
-            Mar 1, 2019, 7:00am EST</h3>
-        <h4>Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.</h4>
+        <p1>By Daisy Alioto
+            Mar 1, 2019, 7:00am EST</p1>
+        <p2>Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.</p2>
     </header>
-    <details class="question" id="question-1">
-        <summary>What it is:</summary>
-        <div>
-            <p>A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.
-            </p>
+
+    <main>
+        <details class="questions" id="question-1">
+            <summary>What it is:</summary>
+            <div>
+                <p>A digital or print effect where one color fades into another. Typically rendered in soft or pastel
+                    tones.
+                </p>
+            </div>
+        </details>
+
+        <details class="questions" id="question-2">
+            <summary>Where it is:</summary>
+            <div>
+                <p>Gradients are seemingly everywhere in media and marketing. They are part of a suite of Facebook
+                    status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The
+                    Daily, which displays a yellow to blue gradient.
+
+                    Gradients have taken over Coachella’s app and website (if you watch carefully, the colors shift).
+                    Ally’s billboard in A Star Is Born is a full-on gradient, and so was the branding for the Oscars
+                    ceremony that recognized Lady Gaga.
+
+                    On Instagram, they provide a product backdrop for popular Korean beauty brand Glow, and have been
+                    embraced by indie magazines Gossamer and Anxy both designed by Berkeley studio Anagraph.
+                </p>
+            </div>
+        </details>
+
+        <details class="questions" id="question-3">
+            <summary>Why you’r seeing it:</summary>
+            <div>
+                <p>Gradients are the confluence of three different trends: Light and Space art, vaporwave, and bisexual
+                    lighting.
+
+                    In the art and design world, Light and Space developed in the 1960s and ’70s has been experiencing a
+                    revival thanks to its Instagramability. Light and Space pioneer James Turrell has been embraced by
+                    celebrities like Beyoncé, Drake, and Kanye West. Drake’s Hotline Bling video was inspired by
+                    Turrell’s light-infused rooms called Ganzfelds. The Kardashian-Jenner-West crew posted an Instagram
+                    in front of one of Turrell’s works in Los Angeles. (I was yelled at by security for taking a picture
+                    there but it’s fine.)
+                </p>
+            </div>
+        </details>
+
+
+    </main>
+
+    <section>
+        <div id="An overview"> An overview
+            <p>By Sushanto Sarkar</p>
+
         </div>
-        <main>
-            <p></p>
-        </main>
-        <footer>
-            <button>
-                <span>Gradients: Design trend ></span>
-                <span>Dynamic identities ></span>
-                <span>Graphic Design: Histories ></span>
-            </button>
-        </footer>
+
+    </section>
+
+
+
+
+    <!-- BOTTOM NAVIGATION FOR MOBILE -->
+    <nav class="mobile-nav">
+        <a class="bloc-icon page-1" href="../page-1/">Gradients: Design trend</a>
+        <a class="bloc-icon page-2" href="../page-2/">Dynamic identities</a>
+        <a class="bloc-icon page-3" href="../page-3/">Graphic Design: Histories </a>
+    </nav>
 </body>
 
 </html>
